WIP: main feed posts & app custom icons

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,3 +16,6 @@
 .nav-button {
 	@apply hidden h-6 md:inline-flex cursor-pointer hover:scale-125 transition-all duration-150 ease-out;
 }
+.post-button {
+	@apply h-7 cursor-pointer hover:scale-125 transition-all duration-150 ease-out;
+}
